--- a/app/src/main/res/layout/fragment_loans_list.xml
+++ b/app/src/main/res/layout/fragment_loans_list.xml
@@ -9,11 +9,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/loansRecyclerView"
-        android:name="com.focusstart.features.loan.ui.LoansListFragment"
+        android:name=".features.loan.ui.LoansListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:context=".fragments.CurrenciesListFragment"
+        tools:context=".features.loan.ui.LoansListFragment"
         tools:listitem="@layout/item_loan" />
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
