--- a/app/src/main/res/layout/item_loan.xml
+++ b/app/src/main/res/layout/item_loan.xml
@@ -1,60 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:clickable="true"
+    android:focusable="true"
+    style="@style/item_card">
 
-    <TextView
-        android:id="@+id/dateView"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        style="@style/TextAppearance.MaterialComponents.Body2"
-        tools:text="Заём от 25.05.2020" />
+        android:layout_margin="8dp">
 
-    <TextView
-        android:id="@+id/nameView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateView"
-        style="@style/TextAppearance.MaterialComponents.Body1"
-        tools:text="Акакий Акакиевич" />
+        <TextView
+            android:id="@+id/dateView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            style="@style/TextAppearance.MaterialComponents.Body2"
+            tools:text="Заём от 25.05.2020" />
 
-    <ImageView
-        android:id="@+id/statusImageView"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_margin="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nameView"
-        tools:src="@drawable/ic_approved"
-        android:contentDescription="@string/loan_status_image_description" />
+        <TextView
+            android:id="@+id/nameView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/dateView"
+            style="@style/TextAppearance.MaterialComponents.Body1"
+            tools:text="Акакий Акакиевич" />
 
-    <TextView
-        android:id="@+id/statusTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/statusImageView"
-        app:layout_constraintStart_toEndOf="@id/statusImageView"
-        app:layout_constraintTop_toTopOf="@+id/statusImageView"
-        style="@style/TextAppearance.MaterialComponents.Body2"
-        tools:text="Одобрено" />
+        <ImageView
+            android:id="@+id/statusImageView"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_margin="8dp"
+            android:contentDescription="@string/loan_status_image_description"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/nameView"
+            tools:src="@drawable/ic_approved" />
 
-    <TextView
-        android:id="@+id/amountView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/nameView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/nameView"
-        style="@style/TextAppearance.MaterialComponents.Body1"
-        tools:text="5000 p." />
+        <TextView
+            android:id="@+id/statusTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/statusImageView"
+            app:layout_constraintStart_toEndOf="@id/statusImageView"
+            app:layout_constraintTop_toTopOf="@+id/statusImageView"
+            style="@style/TextAppearance.MaterialComponents.Body2"
+            tools:text="Одобрено" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/amountView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/nameView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/nameView"
+            style="@style/TextAppearance.MaterialComponents.Body1"
+            tools:text="5000 p." />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</com.google.android.material.card.MaterialCardView>
