--- a/app/src/main/res/layout/fragment_loan_created.xml
+++ b/app/src/main/res/layout/fragment_loan_created.xml
@@ -17,7 +17,7 @@
             style="@style/TextAppearance.MaterialComponents.Headline6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/fragment_margin"
             android:text="@string/loan_created"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -27,7 +27,7 @@
             android:id="@+id/statusImageView"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/fragment_margin"
             android:contentDescription="@string/loan_status_image_description"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/loanCreatedHeaderView"
@@ -38,7 +38,7 @@
             style="@style/TextAppearance.MaterialComponents.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/fragment_margin"
             app:layout_constraintStart_toEndOf="@+id/statusImageView"
             app:layout_constraintTop_toTopOf="@+id/statusImageView"
             tools:text="Заём от 25.05.2020" />
@@ -48,7 +48,7 @@
             style="@style/TextAppearance.MaterialComponents.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/fragment_margin"
             app:layout_constraintBottom_toBottomOf="@+id/statusImageView"
             app:layout_constraintStart_toEndOf="@+id/statusImageView"
             app:layout_constraintTop_toBottomOf="@+id/dateView"
@@ -59,7 +59,7 @@
             style="@style/TextAppearance.MaterialComponents.Headline6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/fragment_margin"
             android:text="@string/loan_borrower_info"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/percentView"
@@ -70,7 +70,7 @@
             style="@style/TextAppearance.MaterialComponents.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/fragment_margin"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/borrowerInfoView"
             tools:text="Акакий Акакиевич" />
@@ -80,7 +80,7 @@
             style="@style/TextAppearance.MaterialComponents.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/fragment_margin"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nameView"
             tools:text="+88005553535" />
@@ -90,7 +90,7 @@
             style="@style/TextAppearance.MaterialComponents.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/fragment_margin"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/statusImageView"
             tools:text="Сумма займа: 5000р." />
@@ -100,7 +100,7 @@
             style="@style/TextAppearance.MaterialComponents.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/fragment_margin"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/amountView"
             tools:text="Срок займа: 30 д." />
@@ -110,7 +110,7 @@
             style="@style/TextAppearance.MaterialComponents.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/fragment_margin"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/periodView"
             tools:text="Процент займа: 4.4 %" />
@@ -120,7 +120,7 @@
             style="@style/TextAppearance.MaterialComponents.Headline6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/fragment_margin"
             android:text="@string/loan_how_to_get"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/phoneView"
@@ -129,10 +129,10 @@
         <TextView
             android:id="@+id/instructionsView"
             style="@style/TextAppearance.MaterialComponents.Body1"
-            android:text="@string/loan_instructions"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/fragment_margin"
+            android:text="@string/loan_instructions"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/guideInfoView"
             tools:text="Инструкция получения займа сразу после его регистрации." />
