Добавлен класс NetworkHandler.kt, проверяющий соединение с сетью. Проверка сети из этого класса используется в SafeApiCall.kt, чтобы вернуть Failure.NetworkConnection при отсутствии сети. SafeApiCall.kt теперь инджектится в DataSource классы. В BaseFragment.kt добавлено поле базовой viewModel и стандартный метод обработки ошибок handleFailure. В соответствии с этим, отредактирован каждый фрагмент в приложении.

--- a/app/src/main/res/layout/fragment_loans_list.xml
+++ b/app/src/main/res/layout/fragment_loans_list.xml
@@ -38,6 +38,12 @@
             tools:context=".features.loan.ui.LoansListFragment"
             tools:listitem="@layout/item_loan" />
 
+        <!--        <TextView
+                    android:id="@+id/guideView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="afsafffafsssssssssssssssssssssssssssssss"-->
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/createLoanButton"
             android:layout_width="wrap_content"
