--- a/app/src/main/res/layout/fragment_loan_details.xml
+++ b/app/src/main/res/layout/fragment_loan_details.xml
@@ -130,7 +130,7 @@
             android:id="@+id/instructionsView"
             style="@style/TextAppearance.MaterialComponents.Body1"
             android:text="@string/loan_instructions"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fragment_margin"
             app:layout_constraintStart_toStartOf="parent"
