Исправлена ошибка в RegisterFragment.kt, при которой не отображлся Failure.

--- a/app/src/main/res/values/strings_errors.xml
+++ b/app/src/main/res/values/strings_errors.xml
@@ -4,4 +4,5 @@
     <string name="error_request">An error has occurred while trying to do a network request</string>
 
     <string name="error_user_not_found">User not found</string>
+    <string name="error_user_already_exists">User already exists</string>
 </resources>
